# claudia-statusline

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  MIGRATION_GUIDE.md  Makefile  NOTICE  README.md  SECURITY.md  SOURCE_VERSION.md  SQLITE_MIGRATION.md  build.rs  claude-settings-example.json  deny.toml  install-claude-code.sh  install-statusline.sh  quick-install.sh  rust-toolchain.toml  statusline-wrapper.sh  statusline.patch  test-installation.sh  toggle-debug.sh  uninstall-statusline.sh
.github/workflows/: build.yml  release-v2.yml  release.yml  security.yml  test-binaries-fixed.yml  test-binaries.yml  test.yml
docs/: ADAPTIVE_LEARNING.md  CONFIGURATION.md  DATABASE_MIGRATIONS.md  INSTALLATION.md  USAGE.md
docs/architecture/: key-flows.md  project-map.md  risky-areas.md
examples/: embedding_example.rs  inspect_turso_data.rs  migrate_turso.rs
scripts/: bump-version.sh  install-statusline.sh  lib.sh  quick-install.sh  release.sh  setup-turso-schema.sql  uninstall-statusline.sh  upload-freebsd-release.sh  upload-macos-release.sh  upload-release.sh  upload-windows-release.sh
src/: commands.rs  common.rs  config.rs  context_learning.rs  database.rs  display.rs  error.rs  git.rs  git_async.rs  git_provider.rs  git_utils.rs  hook_handler.rs  layout.rs  lib.rs  main.rs  models.rs  render.rs  retry.rs  state.rs  stats.rs  sync.rs  theme.rs  utils.rs  version.rs
src/commands/: context_learning.rs  health.rs  hooks.rs  list_vars.rs  maintenance.rs  migrate.rs  sync.rs
src/database/: analytics.rs  context.rs  daily.rs  maintenance.rs  mod.rs  monthly.rs  schema.rs  session.rs  sync.rs  tests.rs
src/gsd/: cache.rs  config.rs  mod.rs  roadmap.rs  state.rs  tests.rs  todos.rs  update.rs
src/layout/: format.rs  mod.rs  presets.rs  template.rs  tests.rs  variables.rs
src/migrations/: mod.rs
src/provider/: mod.rs  test_provider.rs
src/stats/: aggregation.rs  cache.rs  mod.rs  persistence.rs  provider.rs  session.rs  tests.rs
src/templates/: default.tmpl
tests/: baseline_config_test.rs  burn_rate_active_time_accumulation_test.rs  burn_rate_active_time_long_gaps_test.rs  burn_rate_active_time_test.rs  burn_rate_active_time_threshold_test.rs  burn_rate_auto_reset_basic_test.rs  burn_rate_auto_reset_cumulative_cost_test.rs  burn_rate_auto_reset_daily_stats_test.rs  burn_rate_auto_reset_test.rs  burn_rate_auto_reset_threshold_test.rs  burn_rate_auto_reset_weekend_test.rs  burn_rate_high_volume_transactions_test.rs  burn_rate_multi_day_wall_clock_test.rs  burn_rate_support.rs  burn_rate_very_long_sessions_test.rs  burn_rate_volume_test.rs  burn_rate_wall_clock_test.rs  context_learning_sanitization_tests.rs  context_tokens_display_tests.rs  db_maintenance_tests.rs  display_config_integration.rs  hook_integration_tests.rs  integration_tests.rs  json_backup_legacy_warning.rs  layout_integration_tests.rs  lib_api_tests.rs  proptest_tests.rs  regression_tests.rs  sqlite_integration_tests.rs  test_isolation_regression.rs  test_support.rs  theme_integration.rs  token_rate_basic_test.rs
themes/: catppuccin.toml  dracula.toml  gruvbox.toml  nord.toml  one-dark.toml  tokyo-night.toml
