[package]
name = "statusline"
version = "2.2.0"
edition = "2021"
license = "MIT"
description = "Claudia Statusline - A feature-rich statusline for Claude Code, inspired by Peter Steinberger's statusline.rs"
repository = "https://github.com/hagan/claudia-statusline"
build = "build.rs"

[[bin]]
name = "statusline"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
fs2 = "0.4"  # For file locking across processes
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }  # SQLite for concurrent stats

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true